--- a/index.html
+++ b/index.html
@@ -9,34 +9,29 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.3/css/mdb.min.css" rel="stylesheet">
-
+  
+  <script src="./Raghavendar.js"></script>
 </head>
 
 <body>
   <main class="container-fluid">
 
-    <h1>JavaScript for interactive apps!</h1>
-    <h3>Right-click / Inspect, then select console</h3>
-
-    <p>Enter your name:
-      <input id="guest" type="text" value="Eden">
+    <h1>Find the Max</h1>
+    
+    <p>Enter First Number:
+      <input id="one" type="number">
     </p>
 
-    <p>Enter first number:
-      <input id="firstNumber" type="number" value="7">
+    <p>Enter Second Number:
+      <input id="two" type="number">
     </p>
-
-    <p>Enter second number:
-      <input id="secondNumber" type="number" value="12">
-    </p>
-
-    <button id="clicker" class="btn btn-primary">Click me!</button>
+    <button onclick="calculation()">submit</button>
 
     <p id="result"></p>
 
   </main>
 
-  <script>
+  <!-- <script>
     console.log('SCRIPT START')
 
     console.log('Declare testable functions.....................')
@@ -59,7 +54,7 @@
     })
 
     console.log('SCRIPT END')
-  </script>
+  </script> -->
 
   <!-- JQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
